--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.2.1",
     "expo": "^23.0.4",
+    "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
