--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jest-expo": "23.0.0",
+    "react-native-debugger-open": "^0.3.15",
     "react-native-scripts": "1.8.1",
     "react-test-renderer": "16.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "remote-redux-devtools": "^0.5.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -29,6 +31,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.2.1",
     "expo": "^23.0.4",
+    "lodash": "^4.17.4",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
